[tool.poetry]
name = "python-gss-sample"
version = "0.1.0"
description = ""
authors = ["eotel <usawok.4149@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gspread = "^5.3.2"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"
bandit = "^1.7.4"
MonkeyType = "^22.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
